@@ -24,7 +24,7 @@
 function smarty_function_fetch($params, $smarty, $template)
 {
     if (empty($params['file'])) {
-        throw new SmartyException ("[plugin] fetch parameter 'file' cannot be empty");
+        throw new Exception ("[plugin] fetch parameter 'file' cannot be empty");
         return;
     }
 
@@ -41,7 +41,7 @@ function smarty_function_fetch($params, $smarty, $template)
             }
             fclose($fp);
         } else {
-            throw new SmartyException ('[plugin] fetch cannot read file \'' . $params['file'] . '\'');
+            throw new Exception ('[plugin] fetch cannot read file \'' . $params['file'] . '\'');
             return;
         }
     } else {
@@ -94,7 +94,7 @@ function smarty_function_fetch($params, $smarty, $template)
                         case "header":
                             if(!empty($param_value)) {
                                 if(!preg_match('![\w\d-]+: .+!',$param_value)) {
-                                    throw new SmartyException ("[plugin] invalid header format '".$param_value."'");
+                                    throw new Exception ("[plugin] invalid header format '".$param_value."'");
                                     return;
                                 } else {
                                     $extra_headers[] = $param_value;
@@ -110,7 +110,7 @@ function smarty_function_fetch($params, $smarty, $template)
                             if(!preg_match('!\D!', $param_value)) {
                                 $proxy_port = (int) $param_value;
                             } else {
-                                throw new SmartyException ("[plugin] invalid value for attribute '".$param_key."'");
+                                throw new Exception ("[plugin] invalid value for attribute '".$param_key."'");
                                 return;
                             }
                             break;
@@ -128,12 +128,12 @@ function smarty_function_fetch($params, $smarty, $template)
                             if(!preg_match('!\D!', $param_value)) {
                                 $timeout = (int) $param_value;
                             } else {
-                                throw new SmartyException ("[plugin] invalid value for attribute '".$param_key."'");
+                                throw new Exception ("[plugin] invalid value for attribute '".$param_key."'");
                                 return;
                             }
                             break;
                         default:
-                            throw new SmartyException ("[plugin] unrecognized attribute '".$param_key."'");
+                            throw new Exception ("[plugin] unrecognized attribute '".$param_key."'");
                             return;
                     }
                 }
@@ -145,7 +145,7 @@ function smarty_function_fetch($params, $smarty, $template)
                 }
 
                 if(!$fp) {
-                    throw new SmartyException ("[plugin] unable to fetch: $errstr ($errno)");
+                    throw new Exception ("[plugin] unable to fetch: $errstr ($errno)");
                     return;
                 } else {
                     if($_is_proxy) {
@@ -188,7 +188,7 @@ function smarty_function_fetch($params, $smarty, $template)
                     }
                 }
             } else {
-                throw new SmartyException ("[plugin] unable to parse URL, check syntax");
+                throw new Exception ("[plugin] unable to parse URL, check syntax");
                 return;
             }
         } else {
@@ -199,7 +199,7 @@ function smarty_function_fetch($params, $smarty, $template)
                 }
                 fclose($fp);
             } else {
-                throw new SmartyException ('[plugin] fetch cannot read file \'' . $params['file'] .'\'');
+                throw new Exception ('[plugin] fetch cannot read file \'' . $params['file'] .'\'');
                 return;
             }
         }
