@@ -64,7 +64,7 @@ function smarty_function_html_radios($params, $smarty, $template)
             case 'checked':
             case 'selected':
                 if (is_array($_val)) {
-                    throw new SmartyException ('html_radios: the "' . $_key . '" attribute cannot be an array', E_USER_WARNING);
+                    throw new Exception ('html_radios: the "' . $_key . '" attribute cannot be an array', E_USER_WARNING);
                 } else {
                     $selected = (string)$_val;
                 } 
@@ -85,7 +85,7 @@ function smarty_function_html_radios($params, $smarty, $template)
                 break;
 
             case 'radios':
-                throw new SmartyException ('html_radios: the use of the "radios" attribute is deprecated, use "options" instead', E_USER_WARNING);
+                throw new Exception ('html_radios: the use of the "radios" attribute is deprecated, use "options" instead', E_USER_WARNING);
                 $options = (array)$_val;
                 break;
 
@@ -96,7 +96,7 @@ function smarty_function_html_radios($params, $smarty, $template)
                 if (!is_array($_val)) {
                     $extra .= ' ' . $_key . '="' . smarty_function_escape_special_chars($_val) . '"';
                 } else {
-                    throw new SmartyException ("html_radios: extra attribute '$_key' cannot be an array", E_USER_NOTICE);
+                    throw new Exception ("html_radios: extra attribute '$_key' cannot be an array", E_USER_NOTICE);
                 } 
                 break;
         } 
